--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,14 @@ licenses:
   - 'android-sdk-license-.+'
   - 'google-gdk-license-.+'
 
+stages:
+  - name: verify-pr
+    if: branch != master
+  - name: master-build
+    if: branch = master
+
 jobs:
   include:
     - stage: verify-pr
-      if: branch = master
-      name: "verify pr step 1"
+      script: echo "aaa"
       script: ls -lha
-    - script: echo "verify pr step 2"
-      name: "verify pr step 2"
