--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ jobs:
       script: bash ./scripts/setup.sh &&
       ./gradlew testDebugUnitTest spotlessCheck
     - stage: verify-pr
-      name: dynamic-build
+      name: dynamic-build2
       script: bash ./scripts/setup.sh &&
         ./gradlew :app:bundleDebug -Pdynamic &&
         ./gradlew :app:bundleDebug -Pdynamic -Pexclude=".*"
