--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
 
+before_install:
+  - yes | sdkmanager tools
+
 git:
   depth: false
 
