--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,9 @@ dependencies {
   if (!dynamic) {
     allAndroidModules.forEach { androidModule -> api(project(":$androidModule")) }
   }
+
+  androidTestImplementation("androidx.test.ext:junit:1.1.1")
+  androidTestImplementation('androidx.test:rules:1.3.0-rc01')
 }
 
 
