drop data binding home

--- a/gradle/module.gradle
+++ b/gradle/module.gradle
@@ -11,6 +11,7 @@ if (dynamic) {
 apply plugin: "kotlin-android"
 apply plugin: "kotlin-kapt"
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.jakewharton.butterknife'
 
 androidExtensions {
   features = ["parcelize"]
