--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
 
 plugins {
   id "com.diffplug.gradle.spotless" version "4.3.1"
+  id "com.github.plnice.canidropjetifier" version "0.5"
 }
 
 def isRunningSpotless = gradle.startParameter
