--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 android.useAndroidX=true
-android.enableJetifier=true
+android.enableJetifier=false
 android.namespacedRClass=true
 android.enableR8.fullMode=true
 #android.useMinimalKeepRules=true ?
@@ -7,6 +7,8 @@ android.enableR8.fullMode=true
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
+org.gradle.logging.level=lifecycle
+org.gradle.console=verbose
 
 kotlin.code.style=official
 kotlin.incremental=true
